# openmp-examples

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  counter.hpp  function.cpp  function.hpp  parallel_benchmark.cpp  point.hpp
src/: CMakeLists.txt  comparison.cpp  example1.cpp  for_loop.cpp  gather.cpp  reduction.cpp
